force-app/main/default/objects/Appointment__c/fields/Asset_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Asset_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Milestone</label>
    <referenceTo>AssetMilestone</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>