force-app/main/default/objects/Appointment__c/fields/Mode_of_Reception__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Reception__c</fullName>
    <label>Mode of Reception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>