force-app/main/default/objects/Appointment__c/fields/No_Of_Appointment_Slots__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Appointment_Slots__c</fullName>
    <label>No Of Appointment Slots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>