force-app/main/default/objects/Appointment__c/fields/PMS_Appointment_retained__c.field-meta.xml
<CustomField>
    <fullName>PMS_Appointment_retained__c</fullName>
    <label>PMS Appointment retained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>