force-app/main/default/objects/Appointment__c/fields/Type_Of_Requested_Services__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Requested_Services__c</fullName>
    <label>Type Of Requested Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>Running Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>