force-app/main/default/objects/Appointment__c/fields/VRN__c.field-meta.xml
<CustomField>
    <fullName>VRN__c</fullName>
    <label>VRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>