force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Ticket__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Appointments</label>
</ListView>